Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16180

Crash while debugging in Debugger::Internal::DebuggerEngine::updateItem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.0.0
    • Qt Creator 4.0.0-rc1
    • Debugger
    • None
    • Mac OS X 10.11
      XCode 7.3
    • a246e432203b49d164c865883e530378001c8135

    Description

      Crashing while debugging application, crash log is attached

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-16180
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            madwinterin Marcus Tillmanns (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes