Debugger: Make safety check safer

This amends change ad55631c.

Change-Id: If0679ee2f3559fd3d1b2ef57e7456a159dd25b3b
Task-number: QTCREATORBUG-16180
Reviewed-by: Christian Stenger <christian.stenger@qt.io>