src/plugins/debugger/debuggerengine.cpp
@@ -2022,7 +2022,8 @@ void DebuggerEngine::updateItem(const QByteArray &iname)
         showMessage(QString::fromLatin1("IGNORING REPEATED REQUEST TO EXPAND " + iname));
         WatchHandler *handler = watchHandler();
         WatchItem *item = handler->findItem(iname);
-        if (!item->hasChildren()) {
+        QTC_CHECK(item);
+        if (item && !item->hasChildren()) {
             handler->notifyUpdateStarted({iname});
             item->setValue(decodeData({}, "notaccessible"));
             item->setHasChildren(false);
